--- a/两数之和--001.md
+++ b/两数之和--001.md
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
-</html>
-<script>
+# jackQun_algorithm
+```markdown
   // 两数之后算法题目
   var oneSum = function (nums, target) {
     for (let i = 0; i < nums.length; i++) {
@@ -20,10 +10,8 @@
         }
       }
     }
-    console.log("No two sum solution");
   };
   oneSum([2,7,8,14],22)
-
   var twoSum = function(nums, target) { // map.has 表示是否存在指定元素，返回bool值  map.get 表示是否存在指定元素
     var map = new Map();
     for(let j=0; j < nums.length; j++){
@@ -48,4 +36,5 @@
     }
   }
   threeSum([2, 7, 8, 14], 15)
-</script>
+  Markdown
+```
